--- a/src/index.css
+++ b/src/index.css
@@ -93,7 +93,7 @@ input {
 .list ul {
   list-style: none;
   width: 80%;
-  /* overflow: scroll; */
+  overflow: scroll;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 1.2rem;
